<!--
  ~     Nim : 10120248
  ~     Nama : Diana Rachmawati Kusnadi

  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@color/blue_light">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/raleway_black"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/judul"
        android:background="@drawable/roundedbg"
        android:layout_marginBottom="50dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/raleway_light"
                    android:gravity="left"
                    android:text="My Profile"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/imageList"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:src="@drawable/profileabl"
                    app:civ_border="false"
                    app:civ_shadow="true"
                    app:civ_shadow_color="@color/darkgreen"
                    app:civ_shadow_radius="5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/nunitosans_light"
                    android:background="@drawable/tbl2"
                    android:text="Diana Rachmawati Kusnadi"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/nunitosans_light"
                    android:gravity="left"
                    android:text="Description"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/tbl2"
                    android:gravity="center"
                    android:text="Hi! I'm Diana, student from Indonesia Computer University Informatics EngineeringFaculty Engineering and Computer ScienceI currently live in Bandung. I have an interest in networking and I have experience attending seminars, taking networking courses on several online platforms and attending Cisco 1 and Cisco 2 lectures at the Indonesian Computer University."
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/raleway_light"
                    android:gravity="left"
                    android:text="Personal Data"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:ignore="RtlHardcoded" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/tbl2">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="0"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/nim"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text=": 10120248"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="Name"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text=": Diana Rachmawati Kusnadi"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="Class"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text=": IF-6"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="Address"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text=": Majalengka, West Java, Indonesia"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="Religion"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="@string/islam"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0"
                            android:fontFamily="@font/nunitosans_light"
                            android:text="Gender"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/nunitosans_light"
                            android:text=": Women"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </TableRow>
                </TableLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/nunitosans_light"
                    android:gravity="left"
                    android:text="@string/contact"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:ignore="RtlHardcoded" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_dial_number"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/phonecall" />

                    <ImageButton
                        android:id="@+id/btn_email"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/gmail" />

                    <ImageButton
                        android:id="@+id/btn_ig"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/instagram" />

                    <ImageButton
                        android:id="@+id/btn_maps"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/maps" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/nunitosans_light"
                    android:gravity="left"
                    android:text="@string/about2"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/buttonSucces"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/button_transparent"
                    android:drawableStart="@drawable/about"
                    android:padding="10dp"
                    android:text="@string/about_version_application"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>